--- a/package.json
+++ b/package.json
@@ -10,20 +10,23 @@
     "prettier": "npx prettier . --write"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@eslint/eslintrc": "^3.2.0",
+    "@types/node": "^20.17.17",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "eslint": "^9.20.0",
     "eslint-config-next": "15.1.6",
-    "postcss": "^8",
+    "postcss": "^8.5.2",
     "prettier": "^3.5.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3"
   }
 }
