--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "prettier": "npx prettier . --write"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.0.6",
     "clsx": "^2.1.1",
     "next": "15.1.6",
+    "postcss": "^8.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "tailwind-merge": "^3.0.1"
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -24,9 +27,7 @@
     "@types/react-dom": "^19.0.3",
     "eslint": "^9.20.0",
     "eslint-config-next": "15.1.6",
-    "postcss": "^8.5.2",
     "prettier": "^3.5.0",
-    "tailwindcss": "^4.0.6",
     "typescript": "^5.7.3"
   }
 }
