--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.6",
     "clsx": "^2.1.1",
-    "next": "15.1.6",
+    "next": "15.1.7",
+    "next-themes": "^0.4.4",
     "postcss": "^8.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
