--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettier": "npx prettier . --write"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/postcss": "^4.0.6",
     "clsx": "^2.1.1",
     "next": "15.1.7",
