--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/postcss": "^4.0.6",
     "clsx": "^2.1.1",
+    "motion": "^12.4.2",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "postcss": "^8.5.2",
