--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "prettier": "npx prettier . --write"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/postcss": "^4.0.6",
+    "@tanstack/react-query": "^5.66.0",
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "motion": "^12.4.2",
     "next": "15.1.7",
@@ -21,7 +24,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss": "^4.0.6"
+    "tailwindcss": "^4.0.6",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -31,6 +35,7 @@
     "eslint": "^9.20.0",
     "eslint-config-next": "15.1.6",
     "prettier": "^3.5.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "^5.7.3"
   }
 }
