--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todolists",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -25,7 +26,7 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss": "^4.0.6",
+    "tailwindcss": "^4.0.8",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
