--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "prettier": "npx prettier . --write"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.2",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/postcss": "^4.0.6",
     "@tanstack/react-query": "^5.66.0",
@@ -27,6 +29,7 @@
     "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.8",
+    "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
