--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.476.0",
     "motion": "^12.4.2",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
