--- a/package.json
+++ b/package.json
@@ -11,38 +11,39 @@
     "prettier": "npx prettier . --write"
   },
   "dependencies": {
-    "@hookform/resolvers": "^4.1.2",
+    "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
-    "@tailwindcss/postcss": "^4.0.6",
-    "@tanstack/react-query": "^5.66.0",
-    "axios": "^1.7.9",
+    "@tailwindcss/postcss": "^4.0.12",
+    "@tanstack/react-query": "^5.67.2",
+    "@tanstack/react-query-devtools": "^5.67.2",
+    "axios": "^1.8.2",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
-    "lucide-react": "^0.476.0",
-    "motion": "^12.4.2",
-    "next": "15.1.7",
-    "next-themes": "^0.4.4",
-    "postcss": "^8.5.2",
+    "lucide-react": "^0.479.0",
+    "motion": "^12.4.10",
+    "next": "^15.2.1",
+    "next-themes": "^0.4.5",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
-    "tailwind-merge": "^3.0.1",
-    "tailwindcss": "^4.0.8",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss": "^4.0.12",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
-    "@types/node": "^22.13.1",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "eslint": "^9.20.0",
-    "eslint-config-next": "15.1.6",
-    "prettier": "^3.5.0",
+    "@eslint/eslintrc": "^3.3.0",
+    "@types/node": "^22.13.10",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "eslint": "^9.22.0",
+    "eslint-config-next": "15.2.1",
+    "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.2"
   }
 }
